# TLSleuth

./: .gitignore  README.md  SECURITY.md  pyproject.toml  tlsleuth_report.html
.github/workflows/: tests.yml
src/: logger_setup.py  main.py  scanner.py  utils.py
src/tlsleuth/: output.py
tests/: conftest.py
